tests/snapshots/examples_fixtures/type_classes__CustomHandledTracerExample__Flow__Tracer.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/CustomHandledTracerExample/Flow/Tracer.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `CustomHandledTracerExample.Flow.Tracer` doesn't match file path `examples/type_classes/CustomHandledTracerExample/Flow/Tracer.flx`.

  examples/type_classes/CustomHandledTracerExample/Flow/Tracer.flx:4:1
  |
4 | module CustomHandledTracerExample.Flow.Tracer {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
